# WaterNet

./: .gitignore  ReadMe.md  license.txt  setup.cfg  setup.py
src/waternet/: model.py
src/waternet/basic_layers/: conv_blocks.py  fully_connected.py  multiplication_block.py  res_blocks.py
src/waternet/model_layers/: decoder.py  encoder.py  final_fully_connected.py  global_attention.py
