[semantic_release]
version_variable = waternet/__init__.py:__version__

[metadata]
name = waternet
description = A package for finding water
version = attr: waternet.__version__
classifiers =
    Programming Language :: Python

[options]
package_dir=
    =src
packages=find:
include_package_data = True
[options.packages.find]
where=src
exclude=
    data
    build
    cache
    scripts
[options.package_data]
* = *.md, *.txt